--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name='robots' content='noindex,follow' />
+    <meta name="robots" content="noindex,follow"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{{ page.title }}</title>
     <!-- Disable CSS for now
     <link rel="stylesheet" href="/css/style.css">
