--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       {{ content }}
     </section>
     <footer>
-      &copy; Harrow School
+      &copy; Harrow School 2021
     </footer>
   </body>
 </html>
