--- a/_layouts/450.html
+++ b/_layouts/450.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/450/450.css">
   </head>
   <body>
-    <img src="/450/logo.png">
+    <img src="/450/logo.jpg">
     <nav>
       <!-- Disable nav for now
       <a href="/">Home</a>
