--- a/_layouts/450.html
+++ b/_layouts/450.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex,follow"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="refresh" content="300">
     <title>Harrow 450</title>
     <link rel="stylesheet" href="/450/450.css">
   </head>
