--- a/_layouts/450.html
+++ b/_layouts/450.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/450/450.css">
   </head>
   <body>
-    <img src="/450/logo.jpg">
+    <img src="/450/logo.jpg" class="logo">
     <nav>
       <!-- Disable nav for now
       <a href="/">Home</a>
