--- a/9352bf42-1abb-496d-a594-4533a3a6a63e/450.css
+++ b/9352bf42-1abb-496d-a594-4533a3a6a63e/450.css
@@ -18,7 +18,7 @@ h1 {
 h2 {
   text-align: center;
   color: #A09267;
-  font-weight: medium;
+  font-weight: 500;
   text-transform: uppercase;
 }
 
