--- a/_layouts/450.html
+++ b/_layouts/450.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="noindex,follow"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="refresh" content="300">
-    <title>Harrow 450</title>
+    <title>Harrow 450 Community Day</title>
     <link rel="stylesheet" href="/450/450.css">
   </head>
   <body>
