--- a/_layouts/450.html
+++ b/_layouts/450.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/450/450.css">
   </head>
   <body>
-    <img src="/450/logo.jpg" width=128 height=auto>
+    <img src="/450/logo.jpeg" width=128 height=auto>
     <nav>
       <!-- Disable nav for now
       <a href="/">Home</a>
