Bug fix to dates and content update

--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -32,7 +32,7 @@
     }
     </script>
   </head>
-  <body>
+  <body onload="setModifiedDate(); setAccessedDate();">
     <img src="/450/logo.jpeg" width=128 height=auto>
     <nav>
       <!-- Disable nav for now
