--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -9,27 +9,27 @@
     <link rel="stylesheet" href="/450/450.css">
     <script type="text/javascript">
       function setAccessedDate() {
-      if (document.getElementById('accessed-on')) {
-        var now = new Date();
-        var months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
-        var formattedDate = now.getDate().padStart(2,'0')+" "+months[now.getMonth()]+" "+now.getFullYear();
-        document.getElementById('accessed-on').textContent = " (accessed " + formattedDate + ")";
+        if (document.getElementById('accessed-on')) {
+          var now = new Date();
+          var formattedDate = now.toLocaleTimeString("en-GB", {hour12: false, hour: "numeric", minute: "numeric", seconds: "numeric"});
+          document.getElementById('accessed-on').textContent = "Last reloaded: " + formattedDate;
+        }
       }
-    }
-    function setModifiedDate() {
-      if (document.getElementById('last-modified')) {
-        fetch("https://api.github.com/repos/{{ site.github.owner_name }}/{{ site.github.repository_name }}/commits?path={{ page.path }}")
-          .then((response) => {
-            return response.json();
-          })
-          .then((commits) => {
-            var modified = commits[0]['commit']['committer']['date'].slice(0,10);
-            if(modified != "{{ page.date | date: "%Y-%m-%d" }}") {
-              document.getElementById('last-modified').textContent = "Last Modified: " + modified;
-            }
-          });
+      
+      function setModifiedDate() {
+        if (document.getElementById('last-modified')) {
+          fetch("https://api.github.com/repos/{{ site.github.owner_name }}/{{ site.github.repository_name }}/commits?path={{ page.path }}")
+            .then((response) => {
+              return response.json();
+            })
+            .then((commits) => {
+              var modified = commits[0]['commit']['committer']['date'].slice(0,10);
+              if(modified != "{{ page.date | date: "%a %-d %b, %H:%M" }}") {
+                document.getElementById('last-modified').textContent = "Last modified: " + modified;
+              }
+            });
+        }
       }
-    }
     </script>
   </head>
   <body onload="setModifiedDate(); setAccessedDate();">
