--- a/450/450.css
+++ b/450/450.css
@@ -22,6 +22,14 @@ h2 {
   text-transform: uppercase;
 }
 
+b {
+  color: #051742
+}
+
+a {
+  color: #A09267;
+}
+
 img {
   display: block;
   margin-left: auto;
