--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -23,10 +23,10 @@
               return response.json();
             })
             .then((commits) => {
-              var modified = commits[0]['commit']['committer']['date'].slice(0,10);
-              if(modified != "{{ page.date | date: "%a %-d %b, %H:%M" }}") {
-                document.getElementById('last-modified').textContent = "Last modified: " + modified;
-              }
+              var modified = commits[0]['commit']['committer']['date'];
+              var formattedDate = modified.toLocaleDateString("en-GB", {weekday: "short", year: "numeric", month:"short", day:"2-digit"});
+              var formattedTime = modified.toLocaleTimeString("en-GB", {hour12: false, hour: "numeric", minute: "numeric", seconds: "numeric"})
+              document.getElementById('last-modified').textContent = "Last modified: " + formattedDate + ", " + formattedTime;
             });
         }
       }
