--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -24,9 +24,11 @@
             })
             .then((commits) => {
               var modified = commits[0]['commit']['committer']['date'];
+							console.log(modified);
               var formattedDate = modified.toLocaleDateString("en-GB", {weekday: "short", year: "numeric", month:"short", day:"2-digit"});
-              var formattedTime = modified.toLocaleTimeString("en-GB", {hour12: false, hour: "numeric", minute: "numeric", seconds: "numeric"})
+              var formattedTime = modified.toLocaleTimeString("en-GB", {hour12: false, hour: "numeric", minute: "numeric", seconds: "numeric"});
               document.getElementById('last-modified').textContent = "Last modified: " + formattedDate + ", " + formattedTime;
+							console.log(formattedDate + ", " + formattedTime)
             });
         }
       }
