Added debug for JS request

--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -20,6 +20,7 @@
         if (document.getElementById('last-modified')) {
           fetch("https://api.github.com/repos/{{ site.github.owner_name }}/{{ site.github.repository_name }}/commits?path={{ page.path }}")
             .then((response) => {
+							console.log(response)
               return response.json();
             })
             .then((commits) => {
