--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -25,9 +25,13 @@
             })
             .then((commits) => {
               var modified = commits[0]['commit']['committer']['date'];
+							console.log(modified)
 							var date = Date(modified);
+							console.log(date)
               var formattedDate = date.toLocaleDateString("en-GB", {weekday: "short", year: "numeric", month:"short", day:"2-digit"});
+							console.log(formattedDate)
               var formattedTime = date.toLocaleTimeString("en-GB", {hour12: false, hour: "numeric", minute: "numeric", seconds: "numeric"});
+							console.log(formattedTime)
               document.getElementById('last-modified').textContent = "Last modified: " + formattedDate + ", " + formattedTime;
 							console.log(formattedDate + ", " + formattedTime)
             });
