--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -18,7 +18,15 @@
       
       function setModifiedDate() {
         if (document.getElementById('last-modified')) {
-          fetch("https://api.github.com/repos/{{ site.github.owner_name }}/{{ site.github.repository_name }}/commits?path={{ page.path }}")
+          var headers = new Headers({
+						'Content-Type': 'application/json',
+						'Authorization': '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'
+					});
+					
+					fetch("https://api.github.com/repos/{{ site.github.owner_name }}/{{ site.github.repository_name }}/commits?path={{ page.path }}", {
+						method: "GET",
+						headers: headers
+          })
             .then((response) => {
 							console.log(response)
               return response.json();
@@ -51,8 +59,8 @@
       {{ content }}
     </section>
     <footer>
-			<span id="accessed-on">Last reloaded:</span>
-      <span>&copy; Harrow School 2022</span>
+			<p id="accessed-on">Last reloaded:</p>
+      <p>&copy; Harrow School 2022</p>
     </footer>
   </body>
 </html>
