Updated live link, and added test jekyll tag

--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -47,7 +47,7 @@
       }
     </script>
   </head>
-  <body onload="setModifiedDate(); setAccessedDate();">
+  <body>
     <img src="/450/logo.jpeg" width=128 height=auto>
     <nav>
       <!-- Disable nav for now
@@ -59,8 +59,7 @@
       {{ content }}
     </section>
     <footer>
-			<p id="accessed-on">Last reloaded:</p>
-      <p>&copy; Harrow School 2022</p>
+      &copy; Harrow School 2022
     </footer>
   </body>
 </html>
