--- a/_layouts/450-test.html
+++ b/_layouts/450-test.html
@@ -1,36 +1,65 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="robots" content="noindex,follow"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta http-equiv="refresh" content="300">
-    <title>Harrow 450 Community Day</title>
-    <link rel="stylesheet" href="/450/450.css">
-    <script>
-    	function setLastRefreshedTime() {
-        if (document.getElementById('last-refreshed')) {
-          var now = new Date();
-          var formattedTime = now.toLocaleTimeString("en-GB", {hour12: false, hour: "numeric", minute: "numeric", seconds: "numeric"});
-          document.getElementById('last-refreshed').textContent = "Last refreshed at " + formattedTime;
-        }
+
+<head>
+  <meta charset="utf-8">
+  <meta name="robots" content="noindex,follow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="refresh" content="300">
+  <title>Harrow 450 Community Day</title>
+  <link rel="stylesheet" href="/450/450.css">
+  <script>
+    function setLastRefreshedTime() {
+      if (document.getElementById('last-refreshed')) {
+        var now = new Date();
+        var formattedTime = now.toLocaleTimeString("en-GB", { hour12: false, hour: "numeric", minute: "numeric", seconds: "numeric" });
+        document.getElementById('last-refreshed').textContent = "Last refreshed at " + formattedTime;
       }
-    </script>
-  </head>
-  <body onload="setLastRefreshedTime();">
-    <img src="/450/logo.jpeg" width=128 height=auto>
+    }
+  </script>
+
+  <!-- Import Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+</head>
+
+<body onload="setLastRefreshedTime();">
+
+  <header class="py-3">
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="/450-test/primarylogo.jpg" width=128 height=auto>
+        </div>
+        <div class="col">
+          <img src="/450-test/secondarylogo.jpg" width=128 height=auto>
+        </div>
+      </div>
+    </div>
+  
     <nav>
       <!-- Disable nav for now
       <a href="/">Home</a>
       <a href="/blog/">Blog</a>
       -->
     </nav>
+  </header>
+
+  <main class="py-3">
     <section>
       {{ content }}
     </section>
-    <footer>
-			<div id="last-refreshed">Last refreshed at</div>
-      <div>&copy; Harrow School 2022</div>
-    </footer>
-  </body>
+  </main>
+
+  <footer class="py-3">
+    <div id="last-refreshed">Last refreshed at</div>
+    <div>&copy; Harrow School 2022</div>
+  </footer>
+
+</body>
 </html>
