Tried to add interactive map

--- a/450-test/450-test.css
+++ b/450-test/450-test.css
@@ -78,3 +78,12 @@ details[open] > summary {
 td {
 	padding-right: 1em;
 }
+
+#map {
+  height: 50vh;
+  width: 75vw;
+}
+
+.leaflet-marker-icon {
+border-radius: 10px
+}
