--- a/450-test/index.css
+++ b/450-test/index.css
@@ -1,49 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap");
 
+/*
 html {
   margin:    0 auto;
   max-width: 600px;
 }
 
-main {
-  font-family: 'Montserrat', sans-serif;
-}
 
-h1 {
-  text-align: center;
-  padding-top:10px
-}
-
-h1.pink {
-	color: #AC427B
-}
-
-h1.turquoise {
-	color: #347891
-}
-
-h1.orange {
-	color: #E07E2F
-}
-
-h1.purple {
-	color: #62226D
-}
-
-h1.green {
-	color: #34777A
-}
+*/
 
 strong {
-  color: #051742
+  color: #051742;
 }
 
 a {
-  color: #A09267;
+  color: #a09267;
 }
 
 div.center {
-	text-align: center;
+  text-align: center;
 }
 
 img {
@@ -54,36 +29,57 @@ img {
   height: auto;
 }
 
-footer {
+.leaflet-marker-icon {
+  border-radius: 10px;
+}
+
+h3 {
   text-align: center;
-  padding: 1em 0;
+  padding-top: 10px;
+}
+
+h3.pink {
+  color: #ac427b;
+}
+
+h3.turquoise {
+  color: #347891;
+}
+
+h3.orange {
+  color: #e07e2f;
+}
+
+h3.purple {
+  color: #62226d;
+}
+
+h3.green {
+  color: #34777a;
+}
+
+* {
+  font-family: "Montserrat", sans-serif;
 }
 
 details {
-
 }
 
 details > summary {
   font-weight: bold;
-	padding-top: 1em;
+  padding-top: 1em;
 }
 
 details > p {
-  
 }
 
 details[open] > summary {
- 
 }
 
 td {
-	padding-right: 1em;
+  padding-right: 1em;
 }
 
 .map {
   height: 50vh;
-}
-
-.leaflet-marker-icon {
-border-radius: 10px
 }
