tidied up a little

--- a/450-test/index.css
+++ b/450-test/index.css
@@ -87,3 +87,10 @@ td {
 .modalmap {
   height: 40vh;
 }
+
+.btn-danger,
+.btn-danger:hover,
+.btn-danger:active,
+.btn-danger:visited {
+  background-color: #e07e2f !important;
+}
