--- a/450-test/libraries/glass-octopus/glassoct.css
+++ b/450-test/libraries/glass-octopus/glassoct.css
@@ -35,3 +35,10 @@
     transform: scale(1, 1);
   }
 }
+
+.glass-oct-tent {
+  position: absolute;
+  height: auto;
+  padding: 0px;
+  margin: 0px;
+}
