--- a/450-test/index.css
+++ b/450-test/index.css
@@ -38,6 +38,12 @@ h3 {
   padding-top: 10px;
 }
 
+.subtitle {
+  text-align: center;
+  padding-top: 10px;
+  font-weight: 700;
+}
+
 h3.pink {
   color: #ac427b;
 }
