--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,5 @@
 html {
     margin:    0 auto;
     max-width: 1000px;
+    font-family: system-ui, Helvetica, sans-serif;
 }
-
-body {
-    font-family: system-ui, Helvetica, sans-serif
-}
-
-h1 {
-    font-family: ui-monospace, Courier New, monospace
-}
-
