--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       {{ content }}
     </section>
     <footer>
-      &copy; Harrow School 2024
+      &copy; Harrow School {{ 'now' | date: '%Y' }}
     </footer>
   </body>
 </html>
